<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.main.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/appbar_base_margin">

        <LinearLayout
            android:id="@+id/toolbar_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/appbar_layout_height"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etSearchInput"
                android:background="@null"
                style="@style/SearchInputStyle"
                android:hint="@string/search_input_hint" />

            <ImageView
                android:id="@+id/ic_loupe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_marginVertical="@dimen/appbar_base_margin"
                android:src="@drawable/ic_loupe" />

        </LinearLayout>

        <ImageView
            android:id="@+id/appbar_divider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="72dp"
            android:background="@drawable/appbar_divider" />


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="28dp">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subscribed_tab_title" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_streams_tab_title" />

        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>

</LinearLayout>
