<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/topicFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_bg">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/toolbar_container"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/btnTopicNavBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                android:layout_marginVertical="20dp"
                android:src="@drawable/ic_nav_back_arrow" />

            <TextView
                android:id="@+id/tvTopicTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="#general"
                android:textColor="@color/white"
                android:textSize="24sp" />

        </FrameLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tvTopic"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/view_bg"
        android:gravity="center"
        android:text="@string/test_topic_name"
        android:textColor="@color/new_message_text"
        android:textSize="@dimen/large_text_size"
        app:layout_constraintTop_toBottomOf="@id/appbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTopic"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="@dimen/activity_main_base_padding"
        app:layout_constraintBottom_toTopOf="@+id/sendBlock"
        app:layout_constraintTop_toBottomOf="@+id/tvTopic" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sendBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/edittext_vertical_margin"
        android:paddingStart="@dimen/activity_main_base_padding"
        android:paddingEnd="@dimen/activity_main_base_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvTopic">

        <EditText
            android:id="@+id/etTopicName"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginVertical="@dimen/edittext_vertical_margin"
            android:background="@drawable/edittext_topic_bg"
            android:hint="@string/channel_name_hint"
            android:paddingHorizontal="@dimen/new_message_horizontal_padding"
            android:textColor="@color/new_message_text"
            android:textColorHint="@color/new_message_text"
            android:textSize="@dimen/large_text_size"
            app:layout_constraintBottom_toTopOf="@id/etMessage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etMessage"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginVertical="@dimen/edittext_vertical_margin"
            android:background="@drawable/edittext_message_bg"
            android:hint="@string/message_input_hint"
            android:paddingHorizontal="@dimen/new_message_horizontal_padding"
            android:textColor="@color/new_message_text"
            android:textColorHint="@color/new_message_text"
            android:textSize="@dimen/large_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/imgPlus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etTopicName" />

        <ImageView
            android:id="@+id/imgPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="12dp"
            android:src="@drawable/ic_text_plus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/etMessage"
            app:layout_constraintTop_toBottomOf="@id/etTopicName" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>